--- a/modelo1/index.html
+++ b/modelo1/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="nce18cex">
     <link rel="icon" href="ico/favicon.png">
 
-    <title>Sonno - Multi purpose bootstrap landing page</title>
+    <title>Maneschy.com • Studio Interativo</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -71,7 +71,7 @@
 				<div class="object" id="object_two"></div>
 				<div class="object" id="object_one"></div>
 			</div>
-			<p>Please wait...</p>
+			<p>Carregando...</p>
 		</div>
 	</div>
 	<script type="text/javascript">
@@ -90,18 +90,15 @@
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
 					<span class="icon icon-menu"></span>
 				</button>
-				<a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
+				<a class="navbar-brand" href="#"><img src="img/logo-maneschy.png" alt="" /></a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="page-scroll active"><a href="#home">Home</a></li>
-					<li class="page-scroll"><a href="#about">About us</a></li>
-					<li class="page-scroll"><a href="#features">Features</a></li>
-					<li class="page-scroll"><a href="#gallery">Gallery</a></li>
-					<li class="page-scroll"><a href="#pricing">Pricing</a></li>
-					<li class="page-scroll"><a href="#team">Team</a></li>
-					<li class="page-scroll"><a href="#blog">Blog</a></li>
-					<li class="page-scroll"><a href="#contact">Contact</a></li>
+					<li class="page-scroll"><a href="#about">Maneschy.com</a></li>
+					<li class="page-scroll"><a href="#features">o que fazemos</a></li>
+					<li class="page-scroll"><a href="#gallery">Portifólio</a></li>
+					<li class="page-scroll"><a href="#pricing">contato</a></li>
 				</ul>
                 <ul class="navbar-right">
 					<li><a href="#" class="btn btn-link"><i class="icon-lock"></i> Login</a></li>
